@@ -53,7 +53,7 @@ if(PANDOC)
 		pmemstream_async_wait_persisted pmemstream_committed_timestamp pmemstream_delete pmemstream_entry_data
 		pmemstream_entry_iterator_delete pmemstream_entry_iterator_get pmemstream_entry_iterator_is_valid
 		pmemstream_entry_iterator_new pmemstream_entry_iterator_next pmemstream_entry_iterator_seek_first
-		pmemstream_entry_length pmemstream_entry_timestamp pmemstream_from_map pmemstream_persisted_timestamp
+		pmemstream_entry_size pmemstream_entry_timestamp pmemstream_from_map pmemstream_persisted_timestamp
 		pmemstream_publish pmemstream_region_allocate pmemstream_region_free pmemstream_region_iterator_delete
 		pmemstream_region_iterator_get pmemstream_region_iterator_is_valid pmemstream_region_iterator_new
 		pmemstream_region_iterator_next pmemstream_region_iterator_seek_first pmemstream_region_runtime_initialize
